--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ESNext",
     "target": "ES2020",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
+    "moduleResolution": "node",
     "outDir": "dist"
   }
-} 
+}
