--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Backend server for TradeCraft learning platform",
   "main": "dist/index.js",
-"scripts": {
-  "start": "node dist/index.js",
-  "dev": "nodemon --watch './**/*.ts' --exec \"node --loader ts-node/esm index.ts\"",
-  "build": "tsc",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+  "scripts": {
+    "start": "node dist/index.js",
+    "dev": "nodemon --watch './**/*.ts' --exec \"node --loader ts-node/esm index.ts\"",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
@@ -18,6 +18,7 @@
     "express": "^4.18.3",
     "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.15.1",
     "pdfjs-dist": "^5.2.133"
   },
