--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
     "target": "ES2020",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "rootDir": ".",
+    "allowJs": true,
     "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "outDir": "dist"
-  }
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["./**/*"],
+  "exclude": ["node_modules", "dist"]
 }
