--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/stripe": "^8.0.417",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -20,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.15.1",
-    "pdfjs-dist": "^5.2.133"
+    "pdfjs-dist": "^5.2.133",
+    "stripe": "^18.3.0"
   },
   "type": "module",
   "devDependencies": {
